--- a/umbracoProject.csproj
+++ b/umbracoProject.csproj
@@ -7,6 +7,8 @@
 
   <ItemGroup>
     <PackageReference Include="Umbraco.Cms" Version="11.1.0" />
+    <PackageReference Include="Umbraco.Community.Contentment" Version="4.4.1" />
+    <PackageReference Include="uSync" Version="11.0.1" />
   </ItemGroup>
 
   <ItemGroup>
