accordion and featured item and much more

--- a/uSync/v9/Content/about.config
+++ b/uSync/v9/Content/about.config
@@ -14,10 +14,7 @@
   </Info>
   <Properties>
     <bodyText>
-      <Value><![CDATA[<p>It works!</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe nostrum ullam eveniet pariatur voluptates odit, fuga atque ea nobis sit soluta odio, adipisci quas excepturi maxime quae totam ducimus consectetur?</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius praesentium recusandae illo eaque architecto error, repellendus iusto reprehenderit, doloribus, minus sunt. Numquam at quae voluptatum in officia voluptas voluptatibus, minus!</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut consequuntur magnam, excepturi aliquid ex itaque esse est vero natus quae optio aperiam soluta voluptatibus corporis atque iste neque sit tempora!</p>]]></Value>
+      <Value><![CDATA[]]></Value>
     </bodyText>
     <headerImage>
       <Value><![CDATA[[
@@ -27,6 +24,121 @@
   }
 ]]]></Value>
     </headerImage>
+    <mainContent>
+      <Value><![CDATA[{
+  "layout": {
+    "Umbraco.BlockList": [
+      {
+        "contentUdi": "umb://element/9d7bf9571fdc4b569d9f8cd563f07b47",
+        "settingsUdi": "umb://element/dbee1722731344ee8cb329c2e912a078"
+      },
+      {
+        "contentUdi": "umb://element/c46090b349b14a42bfff8e62cb2ed28b",
+        "settingsUdi": "umb://element/5cfeca9c90bb4bafa05e29e731df2ebe"
+      },
+      {
+        "contentUdi": "umb://element/44568b79e6eb472c9528298f4892e632",
+        "settingsUdi": "umb://element/4b26b6bfac014a878b279df3212225bb"
+      },
+      {
+        "contentUdi": "umb://element/576d6e0bc9774d87ab0bd76df42262c9",
+        "settingsUdi": "umb://element/01319b8d3ffd4537a99af98ab8a59543"
+      },
+      {
+        "contentUdi": "umb://element/eb2d56f742ba491c801ec25d12396ce5",
+        "settingsUdi": "umb://element/8ae36c5adb4d4bd78c74468f60b9f18d"
+      },
+      {
+        "contentUdi": "umb://element/da8b4607eb42471f90f409c96d37b553",
+        "settingsUdi": "umb://element/d6c186f12447411b914af036f9b9493e"
+      },
+      {
+        "contentUdi": "umb://element/857421cff5294ce3bb3dbe86b0ca2c5b",
+        "settingsUdi": "umb://element/1fb5674e51fe40ef970db8b28e941ddb"
+      }
+    ]
+  },
+  "contentData": [
+    {
+      "contentTypeKey": "f197e042-e25a-4a10-9f4a-b502b95b8598",
+      "udi": "umb://element/9d7bf9571fdc4b569d9f8cd563f07b47",
+      "content": "<p>It works!</p>\n<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe nostrum ullam eveniet pariatur voluptates odit, fuga atque ea nobis sit soluta odio, adipisci quas excepturi maxime quae totam ducimus consectetur?</p>\n<p> </p>"
+    },
+    {
+      "contentTypeKey": "f197e042-e25a-4a10-9f4a-b502b95b8598",
+      "udi": "umb://element/c46090b349b14a42bfff8e62cb2ed28b",
+      "content": "<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius praesentium recusandae illo eaque architecto error, repellendus iusto reprehenderit, doloribus, minus sunt. Numquam at quae voluptatum in officia voluptas voluptatibus, minus!</p>"
+    },
+    {
+      "contentTypeKey": "f197e042-e25a-4a10-9f4a-b502b95b8598",
+      "udi": "umb://element/576d6e0bc9774d87ab0bd76df42262c9",
+      "content": "<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut consequuntur magnam, excepturi aliquid ex itaque esse est vero natus quae optio aperiam soluta voluptatibus corporis atque iste neque sit tempora!</p>"
+    },
+    {
+      "contentTypeKey": "4bf36d04-22b4-4216-a99e-304f83be39fb",
+      "udi": "umb://element/44568b79e6eb472c9528298f4892e632",
+      "image": "[\r\n  {\r\n    \"key\": \"a0005126-913e-48ee-95d4-0fff0d9ef832\",\r\n    \"mediaKey\": \"13432a5b-7871-4555-95eb-26997c461088\"\r\n  }\r\n]",
+      "caption": "Pikachu picture",
+      "link": "[{\"name\":\"Pikachu on Google\",\"target\":\"_blank\",\"url\":\"https://google.com/search?q=pikachu\",\"queryString\":\"\"}]"
+    },
+    {
+      "contentTypeKey": "4dfd00cc-62ac-4a14-a45c-996c3d87666b",
+      "udi": "umb://element/eb2d56f742ba491c801ec25d12396ce5",
+      "title": "Featured Items",
+      "description": "These are some cool items",
+      "featuredItems": "{\r\n  \"layout\": {\r\n    \"Umbraco.BlockGrid\": [\r\n      {\r\n        \"contentUdi\": \"umb://element/30a647406b7648d5a492dd096c31f2e8\",\r\n        \"settingsUdi\": \"umb://element/8f752f8174c94e11a424dc2a5e7d30d3\",\r\n        \"areas\": [],\r\n        \"columnSpan\": 12,\r\n        \"rowSpan\": 1\r\n      },\r\n      {\r\n        \"contentUdi\": \"umb://element/bc0af011733842a49922548bc780ebc8\",\r\n        \"settingsUdi\": \"umb://element/09389fcf855142cc8f2f84e395337388\",\r\n        \"areas\": [],\r\n        \"columnSpan\": 12,\r\n        \"rowSpan\": 1\r\n      },\r\n      {\r\n        \"contentUdi\": \"umb://element/59cf77f9e5074c459fdcaa6d3eebdddb\",\r\n        \"settingsUdi\": \"umb://element/3c232053119848f8b56ff66f5df3a217\",\r\n        \"areas\": [],\r\n        \"columnSpan\": 12,\r\n        \"rowSpan\": 1\r\n      }\r\n    ]\r\n  },\r\n  \"contentData\": [\r\n    {\r\n      \"contentTypeKey\": \"f7eecd09-6ba5-4677-94de-dcc3b8c195f1\",\r\n      \"udi\": \"umb://element/30a647406b7648d5a492dd096c31f2e8\",\r\n      \"title\": \"First One\",\r\n      \"description\": \"1st Featured Item\",\r\n      \"image\": \"[\\r\\n  {\\r\\n    \\\"key\\\": \\\"ca77dce3-74ad-438d-8f61-27e42ba38d74\\\",\\r\\n    \\\"mediaKey\\\": \\\"13432a5b-7871-4555-95eb-26997c461088\\\"\\r\\n  }\\r\\n]\",\r\n      \"link\": \"[{\\\"name\\\":\\\"/blog/\\\",\\\"url\\\":\\\"/blog/\\\"}]\"\r\n    },\r\n    {\r\n      \"contentTypeKey\": \"f7eecd09-6ba5-4677-94de-dcc3b8c195f1\",\r\n      \"udi\": \"umb://element/bc0af011733842a49922548bc780ebc8\",\r\n      \"title\": \"Second Item\",\r\n      \"description\": \"Another1\",\r\n      \"image\": \"[\\r\\n  {\\r\\n    \\\"key\\\": \\\"859d1d6e-104a-4a71-9c28-4c3993c55cb6\\\",\\r\\n    \\\"mediaKey\\\": \\\"73d10e32-90b1-4fab-b6ed-ba948c180e60\\\"\\r\\n  }\\r\\n]\",\r\n      \"link\": \"[{\\\"name\\\":\\\"/contact/\\\",\\\"url\\\":\\\"/contact/\\\"}]\"\r\n    },\r\n    {\r\n      \"contentTypeKey\": \"f7eecd09-6ba5-4677-94de-dcc3b8c195f1\",\r\n      \"udi\": \"umb://element/59cf77f9e5074c459fdcaa6d3eebdddb\",\r\n      \"title\": \"Last Item\",\r\n      \"description\": \"Last one\",\r\n      \"image\": \"[\\r\\n  {\\r\\n    \\\"key\\\": \\\"11c76834-153d-47a8-ba01-cf27b51bfbdf\\\",\\r\\n    \\\"mediaKey\\\": \\\"5f651823-36c7-4156-92cd-33b7f3cda5ce\\\"\\r\\n  }\\r\\n]\",\r\n      \"link\": \"[{\\\"name\\\":\\\"/\\\",\\\"url\\\":\\\"/\\\"}]\"\r\n    }\r\n  ],\r\n  \"settingsData\": [\r\n    {\r\n      \"contentTypeKey\": \"cc3df662-e4a4-4084-8b6a-081d46092a95\",\r\n      \"udi\": \"umb://element/8f752f8174c94e11a424dc2a5e7d30d3\"\r\n    },\r\n    {\r\n      \"contentTypeKey\": \"cc3df662-e4a4-4084-8b6a-081d46092a95\",\r\n      \"udi\": \"umb://element/09389fcf855142cc8f2f84e395337388\",\r\n      \"hide\": \"0\"\r\n    },\r\n    {\r\n      \"contentTypeKey\": \"cc3df662-e4a4-4084-8b6a-081d46092a95\",\r\n      \"udi\": \"umb://element/3c232053119848f8b56ff66f5df3a217\"\r\n    }\r\n  ]\r\n}"
+    },
+    {
+      "contentTypeKey": "c6e6824e-cdc4-4f42-b20a-6cf984937a0c",
+      "udi": "umb://element/da8b4607eb42471f90f409c96d37b553",
+      "title": "FAQs",
+      "description": "These are some FAQs",
+      "accordionItems": "{\r\n  \"layout\": {\r\n    \"Umbraco.BlockList\": [\r\n      {\r\n        \"contentUdi\": \"umb://element/b149133bc65c4a6fbfa0880b25c3cb4c\",\r\n        \"settingsUdi\": \"umb://element/2c8693109cb0447f8dd974e30d4c7fd0\"\r\n      },\r\n      {\r\n        \"contentUdi\": \"umb://element/db0106b459ec4123a72310412b1d8239\",\r\n        \"settingsUdi\": \"umb://element/d93578fbaa34461b9c71e8dde7966c3a\"\r\n      },\r\n      {\r\n        \"contentUdi\": \"umb://element/cc298d71b9bc4dccb0c0ecdf0c0e068a\",\r\n        \"settingsUdi\": \"umb://element/f9985621b1a24d7fb4b25bbca078a650\"\r\n      }\r\n    ]\r\n  },\r\n  \"contentData\": [\r\n    {\r\n      \"contentTypeKey\": \"4974e586-ca12-4160-956c-cd7519aba1bc\",\r\n      \"udi\": \"umb://element/b149133bc65c4a6fbfa0880b25c3cb4c\",\r\n      \"content\": \"<p>Data and stuff</p>\",\r\n      \"title\": \"1st Accordion\"\r\n    },\r\n    {\r\n      \"contentTypeKey\": \"4974e586-ca12-4160-956c-cd7519aba1bc\",\r\n      \"udi\": \"umb://element/db0106b459ec4123a72310412b1d8239\",\r\n      \"title\": \"2nd Accordion\",\r\n      \"content\": \"<p>Toooooooooooore roooooooooooooooo</p>\"\r\n    },\r\n    {\r\n      \"contentTypeKey\": \"4974e586-ca12-4160-956c-cd7519aba1bc\",\r\n      \"udi\": \"umb://element/cc298d71b9bc4dccb0c0ecdf0c0e068a\",\r\n      \"title\": \"3rd Accordion\",\r\n      \"content\": \"<p>This is pretty cool</p>\"\r\n    }\r\n  ],\r\n  \"settingsData\": [\r\n    {\r\n      \"contentTypeKey\": \"a9c82cef-5e83-4dcd-9859-b9bda0ead4b8\",\r\n      \"udi\": \"umb://element/2c8693109cb0447f8dd974e30d4c7fd0\"\r\n    },\r\n    {\r\n      \"contentTypeKey\": \"a9c82cef-5e83-4dcd-9859-b9bda0ead4b8\",\r\n      \"udi\": \"umb://element/d93578fbaa34461b9c71e8dde7966c3a\"\r\n    },\r\n    {\r\n      \"contentTypeKey\": \"a9c82cef-5e83-4dcd-9859-b9bda0ead4b8\",\r\n      \"udi\": \"umb://element/f9985621b1a24d7fb4b25bbca078a650\"\r\n    }\r\n  ]\r\n}"
+    },
+    {
+      "contentTypeKey": "c6e6824e-cdc4-4f42-b20a-6cf984937a0c",
+      "udi": "umb://element/857421cff5294ce3bb3dbe86b0ca2c5b",
+      "title": "FAQs",
+      "description": "These are some FAQs",
+      "accordionItems": "{\r\n  \"layout\": {\r\n    \"Umbraco.BlockList\": [\r\n      {\r\n        \"contentUdi\": \"umb://element/88d331be7a8843de95e7a5e2f0a68558\",\r\n        \"settingsUdi\": \"umb://element/db30cd6e56e64041b32292450b3e5c93\"\r\n      },\r\n      {\r\n        \"contentUdi\": \"umb://element/c7cc18e3ae2543ef89892d3c3b6e5657\",\r\n        \"settingsUdi\": \"umb://element/6ceb35da40814d059f070327e88609f7\"\r\n      },\r\n      {\r\n        \"contentUdi\": \"umb://element/5a6b463834334b07865ae1d4b6eba37f\",\r\n        \"settingsUdi\": \"umb://element/2c993266c4c44ad8bba89cea2e038765\"\r\n      }\r\n    ]\r\n  },\r\n  \"contentData\": [\r\n    {\r\n      \"contentTypeKey\": \"4974e586-ca12-4160-956c-cd7519aba1bc\",\r\n      \"udi\": \"umb://element/88d331be7a8843de95e7a5e2f0a68558\",\r\n      \"content\": \"<p>Data and stuff</p>\",\r\n      \"title\": \"1st Accordion\"\r\n    },\r\n    {\r\n      \"contentTypeKey\": \"4974e586-ca12-4160-956c-cd7519aba1bc\",\r\n      \"udi\": \"umb://element/c7cc18e3ae2543ef89892d3c3b6e5657\",\r\n      \"title\": \"2nd Accordion\",\r\n      \"content\": \"<p>Toooooooooooore roooooooooooooooo</p>\"\r\n    },\r\n    {\r\n      \"contentTypeKey\": \"4974e586-ca12-4160-956c-cd7519aba1bc\",\r\n      \"udi\": \"umb://element/5a6b463834334b07865ae1d4b6eba37f\",\r\n      \"title\": \"3rd Accordion\",\r\n      \"content\": \"<p>This is pretty cool</p>\"\r\n    }\r\n  ],\r\n  \"settingsData\": [\r\n    {\r\n      \"contentTypeKey\": \"a9c82cef-5e83-4dcd-9859-b9bda0ead4b8\",\r\n      \"udi\": \"umb://element/db30cd6e56e64041b32292450b3e5c93\"\r\n    },\r\n    {\r\n      \"contentTypeKey\": \"a9c82cef-5e83-4dcd-9859-b9bda0ead4b8\",\r\n      \"udi\": \"umb://element/6ceb35da40814d059f070327e88609f7\"\r\n    },\r\n    {\r\n      \"contentTypeKey\": \"a9c82cef-5e83-4dcd-9859-b9bda0ead4b8\",\r\n      \"udi\": \"umb://element/2c993266c4c44ad8bba89cea2e038765\"\r\n    }\r\n  ]\r\n}"
+    }
+  ],
+  "settingsData": [
+    {
+      "contentTypeKey": "b8cd81e5-9b90-4b93-a0bf-ca54f05a20de",
+      "udi": "umb://element/dbee1722731344ee8cb329c2e912a078",
+      "hide": "1"
+    },
+    {
+      "contentTypeKey": "b8cd81e5-9b90-4b93-a0bf-ca54f05a20de",
+      "udi": "umb://element/5cfeca9c90bb4bafa05e29e731df2ebe",
+      "hide": "0"
+    },
+    {
+      "contentTypeKey": "d8af57f6-d31d-4b62-9667-9dee348a0416",
+      "udi": "umb://element/4b26b6bfac014a878b279df3212225bb",
+      "hide": "0"
+    },
+    {
+      "contentTypeKey": "b8cd81e5-9b90-4b93-a0bf-ca54f05a20de",
+      "udi": "umb://element/01319b8d3ffd4537a99af98ab8a59543"
+    },
+    {
+      "contentTypeKey": "8a75229e-e5b1-4168-b893-06d801429a7e",
+      "udi": "umb://element/8ae36c5adb4d4bd78c74468f60b9f18d",
+      "hide": "0"
+    },
+    {
+      "contentTypeKey": "58f35f2c-2150-4dc6-aa6e-7db3f09a70b8",
+      "udi": "umb://element/d6c186f12447411b914af036f9b9493e"
+    },
+    {
+      "contentTypeKey": "58f35f2c-2150-4dc6-aa6e-7db3f09a70b8",
+      "udi": "umb://element/1fb5674e51fe40ef970db8b28e941ddb"
+    }
+  ]
+}]]></Value>
+    </mainContent>
     <subtitle>
       <Value><![CDATA[About]]></Value>
     </subtitle>
