--- a/uSync/v9/ContentTypes/richtextrow.config
+++ b/uSync/v9/ContentTypes/richtextrow.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<ContentType Key="941e48de-7bfa-49de-afd4-53ad23b06a23" Alias="contentProperties" Level="2">
+<ContentType Key="f197e042-e25a-4a10-9f4a-b502b95b8598" Alias="richTextRow" Level="4">
   <Info>
-    <Name>Content Properties</Name>
-    <Icon>icon-defrag color-pink</Icon>
+    <Name>Rich Text Row</Name>
+    <Icon>icon-application-window-alt color-indigo</Icon>
     <Thumbnail>folder.png</Thumbnail>
     <Description></Description>
     <AllowAtRoot>False</AllowAtRoot>
@@ -14,7 +14,7 @@
       <KeepAllVersionsNewerThanDays></KeepAllVersionsNewerThanDays>
       <KeepLatestVersionPerDayForDays></KeepLatestVersionPerDayForDays>
     </HistoryCleanup>
-    <Folder>Compositions</Folder>
+    <Folder>Elements/Content+Blocks/Content+Models</Folder>
     <Compositions />
     <DefaultTemplate></DefaultTemplate>
     <AllowedTemplates />
@@ -22,30 +22,14 @@
   <Structure />
   <GenericProperties>
     <GenericProperty>
-      <Key>173eba1b-e684-40a5-a864-e02e97442572</Key>
-      <Name>Body Text</Name>
-      <Alias>bodyText</Alias>
+      <Key>69a19303-a08f-47d8-9b79-183fa1880e2c</Key>
+      <Name>Content</Name>
+      <Alias>content</Alias>
       <Definition>ca90c950-0aff-4e72-b976-a30b1ac57dad</Definition>
       <Type>Umbraco.TinyMCE</Type>
       <Mandatory>false</Mandatory>
       <Validation></Validation>
-      <Description><![CDATA[Enter Rich text for this page]]></Description>
-      <SortOrder>5</SortOrder>
-      <Tab Alias="content">Content</Tab>
-      <Variations>Nothing</Variations>
-      <MandatoryMessage></MandatoryMessage>
-      <ValidationRegExpMessage></ValidationRegExpMessage>
-      <LabelOnTop>false</LabelOnTop>
-    </GenericProperty>
-    <GenericProperty>
-      <Key>e3bfb823-519a-4b9f-bfc6-00a1823ad140</Key>
-      <Name>Main Content</Name>
-      <Alias>mainContent</Alias>
-      <Definition>6f32e06f-a985-4fce-959a-bbfe2d805335</Definition>
-      <Type>Umbraco.BlockList</Type>
-      <Mandatory>false</Mandatory>
-      <Validation></Validation>
-      <Description><![CDATA[Enter the main content rows for this page]]></Description>
+      <Description><![CDATA[Enter the content for this item]]></Description>
       <SortOrder>0</SortOrder>
       <Tab Alias="content">Content</Tab>
       <Variations>Nothing</Variations>
@@ -56,11 +40,11 @@
   </GenericProperties>
   <Tabs>
     <Tab>
-      <Key>053d7464-d7a7-477e-9c2b-a0df34da910d</Key>
+      <Key>01335110-32a6-42e5-abde-a7f6000c1b45</Key>
       <Caption>Content</Caption>
       <Alias>content</Alias>
       <Type>Tab</Type>
-      <SortOrder>20</SortOrder>
+      <SortOrder>0</SortOrder>
     </Tab>
   </Tabs>
 </ContentType>
