--- a/uSync/v9/ContentTypes/sitenavigationproperties.config
+++ b/uSync/v9/ContentTypes/sitenavigationproperties.config
@@ -1,50 +1,2 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<ContentType Key="b3ae4118-377d-4d9c-af07-f655583708c2" Alias="siteNavigationProperties" Level="2">
-  <Info>
-    <Name>Site Navigation Properties</Name>
-    <Icon>icon-defrag color-pink</Icon>
-    <Thumbnail>folder.png</Thumbnail>
-    <Description></Description>
-    <AllowAtRoot>False</AllowAtRoot>
-    <IsListView>False</IsListView>
-    <Variations>Nothing</Variations>
-    <IsElement>true</IsElement>
-    <HistoryCleanup>
-      <PreventCleanup>False</PreventCleanup>
-      <KeepAllVersionsNewerThanDays></KeepAllVersionsNewerThanDays>
-      <KeepLatestVersionPerDayForDays></KeepLatestVersionPerDayForDays>
-    </HistoryCleanup>
-    <Folder>Compositions</Folder>
-    <Compositions />
-    <DefaultTemplate></DefaultTemplate>
-    <AllowedTemplates />
-  </Info>
-  <Structure />
-  <GenericProperties>
-    <GenericProperty>
-      <Key>72e209e4-d254-45f0-97c5-156e24fc8973</Key>
-      <Name>Main Navigation</Name>
-      <Alias>mainNavigation</Alias>
-      <Definition>cd961bec-5a00-41ec-a1a5-e2d4eb80c846</Definition>
-      <Type>Umbraco.BlockList</Type>
-      <Mandatory>true</Mandatory>
-      <Validation></Validation>
-      <Description><![CDATA[Add  links for navigation]]></Description>
-      <SortOrder>5</SortOrder>
-      <Tab Alias="navigation">Navigation</Tab>
-      <Variations>Nothing</Variations>
-      <MandatoryMessage></MandatoryMessage>
-      <ValidationRegExpMessage></ValidationRegExpMessage>
-      <LabelOnTop>false</LabelOnTop>
-    </GenericProperty>
-  </GenericProperties>
-  <Tabs>
-    <Tab>
-      <Key>ce4d8af6-529e-49c0-9d94-5a3ee3925eb7</Key>
-      <Caption>Navigation</Caption>
-      <Alias>navigation</Alias>
-      <Type>Tab</Type>
-      <SortOrder>100</SortOrder>
-    </Tab>
-  </Tabs>
-</ContentType>
+<Empty Key="b3ae4118-377d-4d9c-af07-f655583708c2" Alias="siteNavigationProperties" Change="Delete" />
