--- a/uSync/v9/Content/contact.config
+++ b/uSync/v9/Content/contact.config
@@ -24,11 +24,14 @@
   }
 ]]]></Value>
     </headerImage>
+    <mainContent>
+      <Value><![CDATA[]]></Value>
+    </mainContent>
     <subtitle>
       <Value><![CDATA[]]></Value>
     </subtitle>
     <title>
-      <Value><![CDATA[]]></Value>
+      <Value><![CDATA[Contact]]></Value>
     </title>
     <umbracoNaviHide>
       <Value><![CDATA[0]]></Value>
