--- a/uSync/v9/ContentTypes/navigationitem.config
+++ b/uSync/v9/ContentTypes/navigationitem.config
@@ -1,89 +1,2 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<ContentType Key="2f809224-6485-477e-932c-901309f14e48" Alias="navigationItem" Level="3">
-  <Info>
-    <Name>Navigation Item</Name>
-    <Icon>icon-science color-indigo</Icon>
-    <Thumbnail>folder.png</Thumbnail>
-    <Description></Description>
-    <AllowAtRoot>False</AllowAtRoot>
-    <IsListView>False</IsListView>
-    <Variations>Nothing</Variations>
-    <IsElement>true</IsElement>
-    <HistoryCleanup>
-      <PreventCleanup>False</PreventCleanup>
-      <KeepAllVersionsNewerThanDays></KeepAllVersionsNewerThanDays>
-      <KeepLatestVersionPerDayForDays></KeepLatestVersionPerDayForDays>
-    </HistoryCleanup>
-    <Folder>Elements/Nested+Content</Folder>
-    <Compositions />
-    <DefaultTemplate></DefaultTemplate>
-    <AllowedTemplates />
-  </Info>
-  <Structure />
-  <GenericProperties>
-    <GenericProperty>
-      <Key>7b0ae1e9-da63-4a11-b438-818e1899ddaa</Key>
-      <Name>Child Links</Name>
-      <Alias>childLinks</Alias>
-      <Definition>b4e3535a-1753-47e2-8568-602cf8cfee6f</Definition>
-      <Type>Umbraco.MultiUrlPicker</Type>
-      <Mandatory>false</Mandatory>
-      <Validation></Validation>
-      <Description><![CDATA[Enter the links to display under this item in navigation menu dropdown]]></Description>
-      <SortOrder>2</SortOrder>
-      <Tab Alias="content/contentStuff">Content</Tab>
-      <Variations>Nothing</Variations>
-      <MandatoryMessage></MandatoryMessage>
-      <ValidationRegExpMessage></ValidationRegExpMessage>
-      <LabelOnTop>false</LabelOnTop>
-    </GenericProperty>
-    <GenericProperty>
-      <Key>5a577154-ce21-4571-a20d-c28cbc3ca036</Key>
-      <Name>Link</Name>
-      <Alias>link</Alias>
-      <Definition>de60062c-6ccf-4ae4-ace8-052f8c700588</Definition>
-      <Type>Umbraco.MultiUrlPicker</Type>
-      <Mandatory>false</Mandatory>
-      <Validation></Validation>
-      <Description><![CDATA[Enter the link for this item]]></Description>
-      <SortOrder>1</SortOrder>
-      <Tab Alias="content/contentStuff">Content</Tab>
-      <Variations>Nothing</Variations>
-      <MandatoryMessage></MandatoryMessage>
-      <ValidationRegExpMessage></ValidationRegExpMessage>
-      <LabelOnTop>false</LabelOnTop>
-    </GenericProperty>
-    <GenericProperty>
-      <Key>c9404af4-523a-4d63-b08a-0cb7baddebe6</Key>
-      <Name>Title</Name>
-      <Alias>title</Alias>
-      <Definition>0cc0eba1-9960-42c9-bf9b-60e150b429ae</Definition>
-      <Type>Umbraco.TextBox</Type>
-      <Mandatory>true</Mandatory>
-      <Validation></Validation>
-      <Description><![CDATA[Enter the title for this navigation item.]]></Description>
-      <SortOrder>0</SortOrder>
-      <Tab Alias="content/contentStuff">Content</Tab>
-      <Variations>Nothing</Variations>
-      <MandatoryMessage></MandatoryMessage>
-      <ValidationRegExpMessage></ValidationRegExpMessage>
-      <LabelOnTop>false</LabelOnTop>
-    </GenericProperty>
-  </GenericProperties>
-  <Tabs>
-    <Tab>
-      <Key>de39d664-64e8-4a6b-acb3-dfc5316af47e</Key>
-      <Caption>Content</Caption>
-      <Alias>content/contentStuff</Alias>
-      <Type>Group</Type>
-      <SortOrder>0</SortOrder>
-    </Tab>
-    <Tab>
-      <Key>f1f75d84-7334-4c41-8dc9-512889ff761a</Key>
-      <Caption>Content</Caption>
-      <Alias>content</Alias>
-      <Type>Tab</Type>
-      <SortOrder>0</SortOrder>
-    </Tab>
-  </Tabs>
-</ContentType>
+<Empty Key="2f809224-6485-477e-932c-901309f14e48" Alias="navigationItem" Change="Delete" />
