textalignment and quote element

--- a/uSync/v9/Content/about.config
+++ b/uSync/v9/Content/about.config
@@ -29,6 +29,10 @@
   "layout": {
     "Umbraco.BlockList": [
       {
+        "contentUdi": "umb://element/290326f0c46940d2863d5e4e4647b0ba",
+        "settingsUdi": "umb://element/b6cdca61ef5e407f965da7dc16fd4055"
+      },
+      {
         "contentUdi": "umb://element/9d7bf9571fdc4b569d9f8cd563f07b47",
         "settingsUdi": "umb://element/dbee1722731344ee8cb329c2e912a078"
       },
@@ -101,6 +105,14 @@
       "title": "FAQs",
       "description": "These are some FAQs",
       "accordionItems": "{\r\n  \"layout\": {\r\n    \"Umbraco.BlockList\": [\r\n      {\r\n        \"contentUdi\": \"umb://element/88d331be7a8843de95e7a5e2f0a68558\",\r\n        \"settingsUdi\": \"umb://element/db30cd6e56e64041b32292450b3e5c93\"\r\n      },\r\n      {\r\n        \"contentUdi\": \"umb://element/c7cc18e3ae2543ef89892d3c3b6e5657\",\r\n        \"settingsUdi\": \"umb://element/6ceb35da40814d059f070327e88609f7\"\r\n      },\r\n      {\r\n        \"contentUdi\": \"umb://element/5a6b463834334b07865ae1d4b6eba37f\",\r\n        \"settingsUdi\": \"umb://element/2c993266c4c44ad8bba89cea2e038765\"\r\n      }\r\n    ]\r\n  },\r\n  \"contentData\": [\r\n    {\r\n      \"contentTypeKey\": \"4974e586-ca12-4160-956c-cd7519aba1bc\",\r\n      \"udi\": \"umb://element/88d331be7a8843de95e7a5e2f0a68558\",\r\n      \"content\": \"<p>Data and stuff</p>\",\r\n      \"title\": \"1st Accordion\"\r\n    },\r\n    {\r\n      \"contentTypeKey\": \"4974e586-ca12-4160-956c-cd7519aba1bc\",\r\n      \"udi\": \"umb://element/c7cc18e3ae2543ef89892d3c3b6e5657\",\r\n      \"title\": \"2nd Accordion\",\r\n      \"content\": \"<p>Toooooooooooore roooooooooooooooo</p>\"\r\n    },\r\n    {\r\n      \"contentTypeKey\": \"4974e586-ca12-4160-956c-cd7519aba1bc\",\r\n      \"udi\": \"umb://element/5a6b463834334b07865ae1d4b6eba37f\",\r\n      \"title\": \"3rd Accordion\",\r\n      \"content\": \"<p>This is pretty cool</p>\"\r\n    }\r\n  ],\r\n  \"settingsData\": [\r\n    {\r\n      \"contentTypeKey\": \"a9c82cef-5e83-4dcd-9859-b9bda0ead4b8\",\r\n      \"udi\": \"umb://element/db30cd6e56e64041b32292450b3e5c93\"\r\n    },\r\n    {\r\n      \"contentTypeKey\": \"a9c82cef-5e83-4dcd-9859-b9bda0ead4b8\",\r\n      \"udi\": \"umb://element/6ceb35da40814d059f070327e88609f7\"\r\n    },\r\n    {\r\n      \"contentTypeKey\": \"a9c82cef-5e83-4dcd-9859-b9bda0ead4b8\",\r\n      \"udi\": \"umb://element/2c993266c4c44ad8bba89cea2e038765\"\r\n    }\r\n  ]\r\n}"
+    },
+    {
+      "contentTypeKey": "6bd65f55-ee3a-4321-88cc-da795595d24d",
+      "udi": "umb://element/290326f0c46940d2863d5e4e4647b0ba",
+      "quoteText": "<p>HERESY, ALL SHALL BE PURGE</p>",
+      "quoteAuthor": "Some imperial guard",
+      "citeLink": "[{\"name\":\"google.com\",\"url\":\"google.com\"}]",
+      "authorJobTitle": "poor guard"
     }
   ],
   "settingsData": [
@@ -135,6 +147,12 @@
     {
       "contentTypeKey": "58f35f2c-2150-4dc6-aa6e-7db3f09a70b8",
       "udi": "umb://element/1fb5674e51fe40ef970db8b28e941ddb"
+    },
+    {
+      "contentTypeKey": "eb3969a0-fbd2-4ea9-9d75-792580ad9b4f",
+      "udi": "umb://element/b6cdca61ef5e407f965da7dc16fd4055",
+      "hide": "0",
+      "textAlignment": "[\"text-start\"]"
     }
   ]
 }]]></Value>
