--- a/uSync/v9/ContentTypes/textalignsettings.config
+++ b/uSync/v9/ContentTypes/textalignsettings.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<ContentType Key="10357eee-451d-4082-80a6-f30bcce9c06c" Alias="blockVisibilitySettings" Level="4">
+<ContentType Key="25377b4b-d4ad-4137-8b06-7dc6e87c3c50" Alias="textAlignSettings" Level="4">
   <Info>
-    <Name>Block Visibility Settings</Name>
+    <Name>Text Align Settings</Name>
     <Icon>icon-defrag color-indigo</Icon>
     <Thumbnail>folder.png</Thumbnail>
     <Description></Description>
@@ -22,15 +22,15 @@
   <Structure />
   <GenericProperties>
     <GenericProperty>
-      <Key>543d5993-8b96-4d8e-b315-f0a9e1e3e6d9</Key>
-      <Name>Hide</Name>
-      <Alias>hide</Alias>
-      <Definition>92897bc6-a5f3-4ffe-ae27-f2e7e33dda49</Definition>
-      <Type>Umbraco.TrueFalse</Type>
+      <Key>9cad4767-f293-4871-8acf-3b8e5698b8f5</Key>
+      <Name>TextAlignment</Name>
+      <Alias>textAlignment</Alias>
+      <Definition>b64741fa-ad90-4f41-bfb5-e84ee3451957</Definition>
+      <Type>Umbraco.Community.Contentment.DataList</Type>
       <Mandatory>false</Mandatory>
       <Validation></Validation>
-      <Description><![CDATA[Set to True, if you want to hide content]]></Description>
-      <SortOrder>5</SortOrder>
+      <Description><![CDATA[Choose the text alignment for this item]]></Description>
+      <SortOrder>20</SortOrder>
       <Tab Alias="settings">Settings</Tab>
       <Variations>Nothing</Variations>
       <MandatoryMessage></MandatoryMessage>
@@ -40,7 +40,7 @@
   </GenericProperties>
   <Tabs>
     <Tab>
-      <Key>f00ce1fb-561a-4f04-b50d-5d56d015f801</Key>
+      <Key>faf354bb-85d5-4986-8601-fb39cb88e88c</Key>
       <Caption>Settings</Caption>
       <Alias>settings</Alias>
       <Type>Tab</Type>
