--- a/uSync/v9/DataTypes/BlockListMainContent.config
+++ b/uSync/v9/DataTypes/BlockListMainContent.config
@@ -54,6 +54,18 @@
       "stylesheet": null,
       "thumbnail": null,
       "view": null
+    },
+    {
+      "backgroundColor": null,
+      "contentElementTypeKey": "6bd65f55-ee3a-4321-88cc-da795595d24d",
+      "editorSize": "medium",
+      "forceHideContentEditorInOverlay": false,
+      "iconColor": null,
+      "label": "{{ 'Quote' + $index }} {{$settings.hide == \"1\" ? '[HIDDEN]':''}}",
+      "settingsElementTypeKey": "eb3969a0-fbd2-4ea9-9d75-792580ad9b4f",
+      "stylesheet": null,
+      "thumbnail": null,
+      "view": null
     }
   ],
   "MaxPropertyWidth": null,
