--- a/uSync/v9/Content/about.config
+++ b/uSync/v9/Content/about.config
@@ -29,6 +29,10 @@
   "layout": {
     "Umbraco.BlockList": [
       {
+        "contentUdi": "umb://element/979e96c1251a465b9845cb5a23a19cf7",
+        "settingsUdi": "umb://element/8094f0a89b2f47b095ac64a3fedc5f65"
+      },
+      {
         "contentUdi": "umb://element/290326f0c46940d2863d5e4e4647b0ba",
         "settingsUdi": "umb://element/b6cdca61ef5e407f965da7dc16fd4055"
       },
@@ -113,6 +117,11 @@
       "quoteAuthor": "Some imperial guard",
       "citeLink": "[{\"name\":\"google.com\",\"url\":\"google.com\"}]",
       "authorJobTitle": "poor guard"
+    },
+    {
+      "contentTypeKey": "915313d4-be27-4cc4-8357-a2c81c1a119c",
+      "udi": "umb://element/979e96c1251a465b9845cb5a23a19cf7",
+      "carouselItems": "{\r\n  \"layout\": {\r\n    \"Umbraco.BlockList\": [\r\n      {\r\n        \"contentUdi\": \"umb://element/08a193ec432c4795aa59637ccb3a45bb\",\r\n        \"settingsUdi\": \"umb://element/2504470357c145699cc858c9953a81fd\"\r\n      },\r\n      {\r\n        \"contentUdi\": \"umb://element/e777242198ab4cf9a711ba0760dabd85\",\r\n        \"settingsUdi\": \"umb://element/5d6b40cdd18245748e518582b8dc5b5d\"\r\n      }\r\n    ]\r\n  },\r\n  \"contentData\": [\r\n    {\r\n      \"contentTypeKey\": \"e71409b5-7977-4367-8357-6449b28cb1b4\",\r\n      \"udi\": \"umb://element/08a193ec432c4795aa59637ccb3a45bb\",\r\n      \"title\": \"Slide 1\",\r\n      \"description\": \"ASd\",\r\n      \"image\": \"[\\r\\n  {\\r\\n    \\\"key\\\": \\\"a2c9ae50-b4ec-49c8-b7df-08e5e1266db4\\\",\\r\\n    \\\"mediaKey\\\": \\\"13432a5b-7871-4555-95eb-26997c461088\\\"\\r\\n  }\\r\\n]\"\r\n    },\r\n    {\r\n      \"contentTypeKey\": \"e71409b5-7977-4367-8357-6449b28cb1b4\",\r\n      \"udi\": \"umb://element/e777242198ab4cf9a711ba0760dabd85\",\r\n      \"title\": \"Slide 2\",\r\n      \"description\": \"HAHHAHA\",\r\n      \"image\": \"[\\r\\n  {\\r\\n    \\\"key\\\": \\\"3990191d-d178-4a73-b55e-712ccc8cf316\\\",\\r\\n    \\\"mediaKey\\\": \\\"73d10e32-90b1-4fab-b6ed-ba948c180e60\\\"\\r\\n  }\\r\\n]\"\r\n    }\r\n  ],\r\n  \"settingsData\": [\r\n    {\r\n      \"contentTypeKey\": \"0c1949ea-58dc-444b-b32a-bff203fab9a0\",\r\n      \"udi\": \"umb://element/2504470357c145699cc858c9953a81fd\"\r\n    },\r\n    {\r\n      \"contentTypeKey\": \"0c1949ea-58dc-444b-b32a-bff203fab9a0\",\r\n      \"udi\": \"umb://element/5d6b40cdd18245748e518582b8dc5b5d\"\r\n    }\r\n  ]\r\n}"
     }
   ],
   "settingsData": [
@@ -153,6 +162,10 @@
       "udi": "umb://element/b6cdca61ef5e407f965da7dc16fd4055",
       "hide": "0",
       "textAlignment": "[\"text-start\"]"
+    },
+    {
+      "contentTypeKey": "589fbf46-cc03-41bc-b1b8-5e6ae0c56d64",
+      "udi": "umb://element/8094f0a89b2f47b095ac64a3fedc5f65"
     }
   ]
 }]]></Value>
