--- a/uSync/v9/DataTypes/BlockListMainContent.config
+++ b/uSync/v9/DataTypes/BlockListMainContent.config
@@ -66,6 +66,18 @@
       "stylesheet": null,
       "thumbnail": null,
       "view": null
+    },
+    {
+      "backgroundColor": null,
+      "contentElementTypeKey": "915313d4-be27-4cc4-8357-a2c81c1a119c",
+      "editorSize": "medium",
+      "forceHideContentEditorInOverlay": false,
+      "iconColor": null,
+      "label": "{{ 'Carousel' + $index }} {{$settings.hide == \"1\" ? '[HIDDEN]':''}}",
+      "settingsElementTypeKey": "589fbf46-cc03-41bc-b1b8-5e6ae0c56d64",
+      "stylesheet": null,
+      "thumbnail": null,
+      "view": null
     }
   ],
   "MaxPropertyWidth": null,
