[Carousel] Options to hide indicator, arrows, and show dark mode

--- a/uSync/v9/Content/about.config
+++ b/uSync/v9/Content/about.config
@@ -165,7 +165,11 @@
     },
     {
       "contentTypeKey": "589fbf46-cc03-41bc-b1b8-5e6ae0c56d64",
-      "udi": "umb://element/8094f0a89b2f47b095ac64a3fedc5f65"
+      "udi": "umb://element/8094f0a89b2f47b095ac64a3fedc5f65",
+      "hide": "0",
+      "showIndicators": "1",
+      "showNavigationArrows": "0",
+      "showDarkMode": "0"
     }
   ]
 }]]></Value>
