--- a/uSync/v9/ContentTypes/carouselrowsettings.config
+++ b/uSync/v9/ContentTypes/carouselrowsettings.config
@@ -22,6 +22,63 @@
     <AllowedTemplates />
   </Info>
   <Structure />
-  <GenericProperties />
-  <Tabs />
+  <GenericProperties>
+    <GenericProperty>
+      <Key>58ddf0f5-456f-4942-a6be-f376b59c5746</Key>
+      <Name>Show Dark Mode</Name>
+      <Alias>showDarkMode</Alias>
+      <Definition>92897bc6-a5f3-4ffe-ae27-f2e7e33dda49</Definition>
+      <Type>Umbraco.TrueFalse</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[Set to true if you want the carousel to be in dark mode]]></Description>
+      <SortOrder>20</SortOrder>
+      <Tab Alias="settings">Settings</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+    <GenericProperty>
+      <Key>04d84e9c-2f85-4105-a456-0a6473bc50fa</Key>
+      <Name>Show Indicators</Name>
+      <Alias>showIndicators</Alias>
+      <Definition>92897bc6-a5f3-4ffe-ae27-f2e7e33dda49</Definition>
+      <Type>Umbraco.TrueFalse</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[Set to true if you want to show indicators of the carousel]]></Description>
+      <SortOrder>10</SortOrder>
+      <Tab Alias="settings">Settings</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+    <GenericProperty>
+      <Key>75b086b9-77b2-4392-b252-7bfcdb9f976c</Key>
+      <Name>Show Navigation Arrows</Name>
+      <Alias>showNavigationArrows</Alias>
+      <Definition>92897bc6-a5f3-4ffe-ae27-f2e7e33dda49</Definition>
+      <Type>Umbraco.TrueFalse</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[Set to true if you want to show navigation arrows of the carousel]]></Description>
+      <SortOrder>15</SortOrder>
+      <Tab Alias="settings">Settings</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+  </GenericProperties>
+  <Tabs>
+    <Tab>
+      <Key>1302fd6d-6e74-4b3a-b895-fd0ee025726f</Key>
+      <Caption>Settings</Caption>
+      <Alias>settings</Alias>
+      <Type>Tab</Type>
+      <SortOrder>100</SortOrder>
+    </Tab>
+  </Tabs>
 </ContentType>
