--- a/uSync/v9/Content/about.config
+++ b/uSync/v9/Content/about.config
@@ -161,14 +161,14 @@
       "contentTypeKey": "eb3969a0-fbd2-4ea9-9d75-792580ad9b4f",
       "udi": "umb://element/b6cdca61ef5e407f965da7dc16fd4055",
       "hide": "0",
-      "textAlignment": "[\"text-start\"]"
+      "textAlignment": "[\"text-right\"]"
     },
     {
       "contentTypeKey": "589fbf46-cc03-41bc-b1b8-5e6ae0c56d64",
       "udi": "umb://element/8094f0a89b2f47b095ac64a3fedc5f65",
       "hide": "0",
       "showIndicators": "1",
-      "showNavigationArrows": "0",
+      "showNavigationArrows": "1",
       "showDarkMode": "0"
     }
   ]
