--- a/uSync/v9/DataTypes/BlockListMainContent.config
+++ b/uSync/v9/DataTypes/BlockListMainContent.config
@@ -15,9 +15,9 @@
       "iconColor": null,
       "label": "{{ 'Rich Text' + $index }} {{$settings.hide == \"1\" ? '[HIDDEN]':''}}",
       "settingsElementTypeKey": "b8cd81e5-9b90-4b93-a0bf-ca54f05a20de",
-      "stylesheet": null,
+      "stylesheet": "~/css/styles.css",
       "thumbnail": null,
-      "view": null
+      "view": "~/App_Plugins/BlockListViews/Blocks/block-preview.html"
     },
     {
       "backgroundColor": null,
@@ -27,9 +27,9 @@
       "iconColor": null,
       "label": "{{ 'Image ' + $index }} {{$settings.hide == \"1\" ? '[HIDDEN]':''}}",
       "settingsElementTypeKey": "d8af57f6-d31d-4b62-9667-9dee348a0416",
-      "stylesheet": null,
+      "stylesheet": "~/css/styles.css",
       "thumbnail": null,
-      "view": null
+      "view": "~/App_Plugins/BlockListViews/Blocks/block-preview.html"
     },
     {
       "backgroundColor": null,
@@ -39,9 +39,9 @@
       "iconColor": null,
       "label": "{{ title != '' ? title : 'Featured Items' + $index }} {{$settings.hide == '1' ? '[Hidden]' : '' }}",
       "settingsElementTypeKey": "8a75229e-e5b1-4168-b893-06d801429a7e",
-      "stylesheet": null,
+      "stylesheet": "~/css/styles.css",
       "thumbnail": null,
-      "view": null
+      "view": "~/App_Plugins/BlockListViews/Blocks/block-preview.html"
     },
     {
       "backgroundColor": null,
@@ -51,9 +51,9 @@
       "iconColor": null,
       "label": "{{ title != '' ? title : 'Accordion ' + $index }} {{$settings.hide == '1' ? '[Hidden]' : '' }}",
       "settingsElementTypeKey": "58f35f2c-2150-4dc6-aa6e-7db3f09a70b8",
-      "stylesheet": null,
+      "stylesheet": "~/css/styles.css",
       "thumbnail": null,
-      "view": null
+      "view": "~/App_Plugins/BlockListViews/Blocks/block-preview.html"
     },
     {
       "backgroundColor": null,
@@ -63,9 +63,9 @@
       "iconColor": null,
       "label": "{{ 'Quote' + $index }} {{$settings.hide == \"1\" ? '[HIDDEN]':''}}",
       "settingsElementTypeKey": "eb3969a0-fbd2-4ea9-9d75-792580ad9b4f",
-      "stylesheet": null,
+      "stylesheet": "~/css/styles.css",
       "thumbnail": null,
-      "view": null
+      "view": "~/App_Plugins/BlockListViews/Blocks/block-preview.html"
     },
     {
       "backgroundColor": null,
@@ -75,9 +75,9 @@
       "iconColor": null,
       "label": "{{ 'Carousel' + $index }} {{$settings.hide == \"1\" ? '[HIDDEN]':''}}",
       "settingsElementTypeKey": "589fbf46-cc03-41bc-b1b8-5e6ae0c56d64",
-      "stylesheet": null,
+      "stylesheet": "~/css/styles.css",
       "thumbnail": null,
-      "view": null
+      "view": "~/App_Plugins/BlockListViews/Blocks/block-preview.html"
     }
   ],
   "MaxPropertyWidth": null,
